package ThiCK.OnTap.Hong_State;

public class MonHoc {
    public String tenMon;
    public int soTC;
    public double diem;

    public MonHoc(String tenMon, int soTC, double diem) {
        this.tenMon = tenMon;
        this.soTC = soTC;
        this.diem = diem;
    }

}
