@startuml
'https://plantuml.com/class-diagram

interface ITrangThai{
    + void display()
}

class CanhBao implements ITrangThai{

}

class BinhThuong implements ITrangThai{

}

class BuocThoiHoc implements ITrangThai{

}

class MonHoc{
    + String tenMon
    + int soTC
    + double diem
    + MonHoc(String tenMon, int soTC, double diem)
    + double getDiem()
    + double getSoTC()
    + double getTenMon()
}

class HocKy{
    + List<MonHoc> dsmh
    + ITrangThai state
    + void addMonHoc(MonHoc mh)
    + void getTrangThai()
    + void display()
}

HocKy --> MonHoc: dsmh
HocKy --> ITrangThai: state

@enduml